--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2547,7 +2547,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "763d187d",
+   "id": "72d104ff",
    "metadata": {},
    "outputs": [
     {
@@ -2677,7 +2677,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "14a8b096",
+   "id": "c425cf97",
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "612fef04",
+   "id": "0557fb56",
    "metadata": {},
    "outputs": [
     {
@@ -2754,7 +2754,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "0d72fa9f",
+   "id": "1b25827d",
    "metadata": {},
    "outputs": [
     {
@@ -2792,7 +2792,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "3ada9606",
+   "id": "fab83010",
    "metadata": {},
    "outputs": [
     {
@@ -2831,7 +2831,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "cd9dc225",
+   "id": "83d942e3",
    "metadata": {},
    "outputs": [
     {
@@ -2869,7 +2869,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "c28b689c",
+   "id": "13217e84",
    "metadata": {},
    "outputs": [
     {
@@ -2903,7 +2903,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "6c85319f",
+   "id": "d5092d2a",
    "metadata": {},
    "outputs": [
     {
@@ -3136,7 +3136,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "92074d26",
+   "id": "f651815a",
    "metadata": {},
    "outputs": [
     {
@@ -3176,7 +3176,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "5294cb55",
+   "id": "c87d92d1",
    "metadata": {},
    "outputs": [
     {
@@ -3213,7 +3213,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "b5aaf81f",
+   "id": "d8f90fd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3225,7 +3225,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "87457866",
+   "id": "30af3ae1",
    "metadata": {},
    "outputs": [
     {
@@ -3365,7 +3365,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "f8d03a64",
+   "id": "291d1129",
    "metadata": {},
    "outputs": [
     {
@@ -3505,7 +3505,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "d3b96418",
+   "id": "0eec9140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3518,7 +3518,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "541531bd",
+   "id": "2615911a",
    "metadata": {},
    "outputs": [
     {
@@ -3555,7 +3555,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "31b1e085",
+   "id": "1f1eb81b",
    "metadata": {},
    "outputs": [
     {
@@ -3592,7 +3592,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "528669e7",
+   "id": "779ea77a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3604,7 +3604,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "2c40c6c1",
+   "id": "e40452f8",
    "metadata": {},
    "outputs": [
     {
@@ -3640,7 +3640,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "fc91f869",
+   "id": "13e76163",
    "metadata": {},
    "outputs": [
     {
@@ -3676,7 +3676,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f822574b",
+   "id": "96f3887b",
    "metadata": {},
    "outputs": [
     {
@@ -3819,7 +3819,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "012adcb4",
+   "id": "7944c50f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3830,7 +3830,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "31f6ceda",
+   "id": "8b5ace53",
    "metadata": {},
    "outputs": [
     {
@@ -3868,7 +3868,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "9be633a4",
+   "id": "1d5b7821",
    "metadata": {},
    "outputs": [
     {
@@ -4022,7 +4022,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "0b9e6395",
+   "id": "7a71d079",
    "metadata": {},
    "outputs": [
     {
@@ -4170,8 +4170,298 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "id": "3f14f03f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "2f3d0a1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "27b91aa1",
+   "id": "e91d9ce4",
    "metadata": {},
    "outputs": [],
    "source": []
