--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -6319,7 +6319,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27d293bf",
+   "id": "f2dfc152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6810db44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6336,7 +6355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f45fad84",
+   "id": "2cb254c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6357,7 +6376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fc4174c",
+   "id": "2d0808d6",
    "metadata": {},
    "outputs": [],
    "source": []
